# VoiceHire_AI

./: .gitignore  README.md
.claude/: launch.json  settings.local.json
simple-chatbot/client/: index.html  package-lock.json
simple-chatbot/client/src/: app.js  config.js  style.css
simple-chatbot/server/: bot.py  config_server.py  env.example  interview_config.json  pyproject.toml  requirements.txt
