[project]
name = "simple-chatbot"
version = "0.1.0"
description = "Simple chatbot built with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[cartesia,daily,deepgram,google,groq,openai,runner,silero,webrtc]>=0.0.102",
    "pipecatcloud",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
    "python-dotenv",
    "Pillow",
    "uvicorn",
    "fastapi",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
